build_plain.txt
    Checking tracea v0.1.0 (E:\Projects\Tracea)
warning: unused import: `std::collections::HashSet`
 --> src\semantic\mapping.rs:1:5
  |
1 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::semantic::swizzle::SwizzleMode`
 --> src\emitter\cuda.rs:3:5
  |
3 | use crate::semantic::swizzle::SwizzleMode;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cudarc::driver::LaunchAsync`
 --> src\emitter\jit.rs:2:5
  |
2 | use cudarc::driver::LaunchAsync;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src\optimizer\cache.rs:4:17
  |
4 | use std::path::{Path, PathBuf};
  |                 ^^^^

error[E0599]: no method named `clone` found for mutable reference `&mut libloading::Library` in the current scope
   --> src\emitter\jit.rs:231:42
    |
231 | ...                   lib: lib.clone(), // This is just a ref count bump usually or internal Arc, keeping the leaked one is fine. 
    |                                ^^^^^
    |
help: there is a method `close` with a similar name
    |
231 -                                 lib: lib.clone(), // This is just a ref count bump usually or internal Arc, keeping the leaked one is fine. 
231 +                                 lib: lib.close(), // This is just a ref count bump usually or internal Arc, keeping the leaked one is fine. 
    |

warning: unused variable: `row`
  --> src\semantic\mapping.rs:20:28
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> String {
   |                            ^^^ help: if this is intentional, prefix it with an underscore: `_row`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `col`
  --> src\semantic\mapping.rs:20:38
   |
20 |     pub fn get_addr(&self, row: u32, col: u32) -> String {
   |                                      ^^^ help: if this is intentional, prefix it with an underscore: `_col`

warning: unused variable: `trans_suffix`
   --> src\emitter\cuda.rs:460:21
    |
460 |                 let trans_suffix = if transposed { ".trans" } else { "" };
    |                     ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_trans_suffix`

For more information about this error, try `rustc --explain E0599`.
warning: `tracea` (lib) generated 7 warnings
error: could not compile `tracea` (lib) due to 1 previous error; 7 warnings emitted
